2014-01-26 A. Degremont <aurelien.degremont@cea.fr>

	* NodeUtils.py: Add group source caching expiration (ticket #98).

2014-01-16 S. Thiell <stephane.thiell@cea.fr>

	* RangeSet.py: Multidimensional RangeSet support (new RangeSetND class).
	Created RangeSetND class to manage a matrix of RangeSet objects. Folding
	of such objects is quite complex and time consuming. A special
	optimization is provided when only one dimension is varying. Patch by
	aurelien.degremont@cea.fr and stephane.thiell@cea.fr.

	* NodeSet.py: Multidimensional nodeset support.  Added support of
	RangeSetND to NodeSet. Optimized NodeSet so that 1D NodeSet objects are
	still using RangeSet (ticket #92). Also benefiting from RangeSetND
	optimization when only one dimension is varying. Patch by
	aurelien.degremont@cea.fr and stephane.thiell@cea.fr.

2014-01-14 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: fix and clean fromall()/@* magic and add resolver option to
	grouplist()'s NodeSet module function.

2014-01-14 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Define module API to access and set group resolver used for
	@-prefixed (eg. '@group') resolution. This is used to circumvent accessing
	and setting NodeSet module's variable 'RESOLVER_STD_GROUP' directly, which
	is not convenient and error prone. The new functions are
	std_group_resolver() and set_std_group_resolver(). Updated User Guide.

	* CLI/Clush.py: ignore IOError on stdin reader thread, but print a warning
	in verbose or debug mode (ticket #201).

2014-01-06 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Fix internal implementation of NodeSet.contiguous(), that
	is, as NodeSet is mutable, we should avoid using the same NodeSet instance
	in NodeSet.contiguous() for different NodeSet values.

2013-12-17 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: fix task.iter_buffers() and worker.iter_buffers() to allow
	optional argument match_keys to be an empty list for convenience. It